@@ -152,7 +152,9 @@ BEGIN
   IDS_DOTINVALID          "A dot is invalid as the first character of the Group field."
   IDS_PASSWORDSNOTMATCH   "The entered passwords do not match.  Please re-enter them."
   IDS_ENTRYEXISTS         "An entry with Group ""%s"", Title ""%s"" and User Name ""%s"" already exists."
+  IDS_ENTRYEXISTS1        "An entry with Group ""%s"", Title ""%s"" and empty User Name already exists."
   IDS_ENTRYEXISTS2        "An entry with an empty Group, Title ""%s"" and User Name ""%s"" already exists."
+  IDS_ENTRYEXISTS3        "An entry with an empty Group, Title ""%s"" and empty User Name already exists."
   IDS_LESS                "<< &Less"
   IDS_MORE                "&More >>"
   IDS_ENTRIESDONOTMATCH   "The two entries do not match."
