@@ -19,6 +19,7 @@ actions that copied data to the clipboard.
 ~v3.08).
 [] Run Command now correctly copied via Drag & Drop.
 [] Allow all fields to be selected for Compare function.
+[] Fixed crash if renaming an entry to one that already exists.
 
 Changes to Existing Features in 3.17.2
 ======================================
